test_files/syntax_errors/MissingMethodBraces.java
public class MissingMethodBraces {
    public static void main(String[] args) 
		// int number;
        // number = 4;
		System.out.println(4); // @error - syntax (Missing opening and closing brace for the main method)

}
